app/design/frontend/Travers/default/Magento_Newsletter/styles/module/_common.scss
.block.newsletter {
    margin-bottom: $indent__xs;

    h3 {
        margin-top: 0;
        font-weight: $font-weight__semibold;
        font-size: 16px;
    }

    .form.subscribe {
        display: table;
        width: 100%;
        max-width: $form-field__width__desktop; // newsletter will be all on its lonesome for mobile-tablet resolutions, and needs a capped width as a result
    }

    .fieldset {
        display: table-cell;
        padding: 0;
        vertical-align: top;
    }

    .field {
        margin: 0;
    }

    .label {
        display: table-row;
    }

    .actions {
        display: table-cell;
        vertical-align: top;
        width: 1%;

        .subscribe {
            min-height: 49px;

            @include min-screen($screen__l) {
                box-shadow: inset 0 -2px $c-sapphire, inset -1px 0px 0px 2px $c-waterfall;
                border-radius: 0 6px 6px 0;
            }
        }
    }
}

